# setuptools_dynamic_dependencies

./: .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setuptools_dynamic_dependencies.py  tox.ini
.github/workflows/: check-pr-template.yml  config-file-deps-bump.yml  new-issue.yml  pre-commit-update.yml
